--- a/totalBlindness/page2.html
+++ b/totalBlindness/page2.html
@@ -17,13 +17,13 @@
                 <thead>
                     <tr>
                         <th tabindex="0" onkeyup="back()" onfocus="play(event)">스토어
-                            <audio src="./audio/스토어.MP3" id="store">오디오 지원되지 않는 브라우저</audio></th>
+                            <audio src="./audio/스토어.MP3">오디오 지원되지 않는 브라우저</audio></th>
                         <th></th>
                         <th></th>
                         <th></th>
                         <th></th>
                         <th tabindex="0" onkeyup="enterkey()" onfocus="play(event)">검색 버튼
-                            <audio src="./audio/검색 버튼.MP3" id="store">오디오 지원되지 않는 브라우저</audio></th>
+                            <audio src="./audio/검색버튼.MP3">오디오 지원되지 않는 브라우저</audio></th>
                     </tr>
                 </thead>
                 <tbody><tr>
