--- a/totalBlindness/page3.html
+++ b/totalBlindness/page3.html
@@ -33,28 +33,32 @@
                     </td></tr>
                     <tr>
                         <td></td>
-                        <td tabindex="0" onkeyup="back()">
+                        <td tabindex="0" onkeyup="back()" onfocus="play(event)">
+                            <audio src="./audio/맥카테고리.MP3">오디오 지원되지 않는 브라우저</audio>
                             <img class="fit-picture"
                             src="./images/Mac.jpg"
                             alt="Mac"
                             style="width: 200px;">
                             <b>Mac</b>
                         </td>
-                        <td tabindex="0" onkeyup="back()">
+                        <td tabindex="0" onkeyup="back()" onfocus="play(event)">
+                            <audio src="./audio/아이폰카테고리.MP3">오디오 지원되지 않는 브라우저</audio>
                             <img class="fit-picture"
                             src="./images/iPhone.jpg"
                             alt="iPhone"
                             style="width: 200px;">
                             <b>iPhone</b>
                         </td>
-                        <td tabindex="0" onkeyup="enterkey()">
+                        <td tabindex="0" onkeyup="enterkey()" onfocus="play(event)">
+                            <audio src="./audio/아이패드카테고리.MP3">오디오 지원되지 않는 브라우저</audio>
                             <img class="fit-picture"
                             src="./images/iPad.jpg"
                             alt="iPad"
                             style="width: 200px;">
                             <b>iPad</b>
                         </td>
-                        <td tabindex="0" onkeyup="back()">
+                        <td tabindex="0" onkeyup="back()" onfocus="play(event)">
+                            <audio src="./audio/애플워치카테고리.MP3">오디오 지원되지 않는 브라우저</audio>
                             <img class="fit-picture"
                             src="./images/Apple Watch.jpg"
                             alt="Apple Watch"
@@ -64,28 +68,32 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td tabindex="0" onkeyup="back()">
+                        <td tabindex="0" onkeyup="back()" onfocus="play(event)">
+                            <audio src="./audio/에어팟카테고리.MP3">오디오 지원되지 않는 브라우저</audio>
                             <img class="fit-picture"
                             src="./images/AirPods.jpg"
                             alt="AirPods"
                             style="width: 200px;">
                             <b>AirPods</b>
                         </td>
-                        <td tabindex="0" onkeyup="back()">
+                        <td tabindex="0" onkeyup="back()" onfocus="play(event)">
+                            <audio src="./audio/에어테그카테고리.MP3">오디오 지원되지 않는 브라우저</audio>
                             <img class="fit-picture"
                             src="./images/AirTag.jpg"
                             alt="AirTag"
                             style="width: 200px;">
                             <b>AirTag</b>
                         </td>
-                        <td tabindex="0" onkeyup="back()">
+                        <td tabindex="0" onkeyup="back()" onfocus="play(event)">
+                            <audio src="./audio/애플티비카테고리.MP3">오디오 지원되지 않는 브라우저</audio>
                             <img class="fit-picture"
                             src="./images/Apple TV 4K.jpg"
                             alt="Apple TV 4K"
                             style="width: 200px;">
                             <b>Apple TV 4K</b>
                         </td>
-                        <td tabindex="0" onkeyup="back()">
+                        <td tabindex="0" onkeyup="back()" onfocus="play(event)">
+                            <audio src="./audio/액세서리카테고리.MP3">오디오 지원되지 않는 브라우저</audio>
                             <img class="fit-picture"
                             src="./images/액세서리.jpg"
                             alt="액세서리"
