--- a/totalBlindness/page4.html
+++ b/totalBlindness/page4.html
@@ -37,7 +37,8 @@
             <table class="type2">
                 <tbody>
                     <tr class = "type2">
-                        <td colspan="2" tabindex="0" onkeyup="back()">
+                        <td colspan="2" tabindex="0" onkeyup="back()" onfocus="play(event)">
+                            <audio src="./audio/아이패드프로.MP3">오디오 지원되지 않는 브라우저</audio>
                             <h2>iPad Pro</h2>
                             <img class="fit-picture"
                             src="./images/iPad Pro.png"
@@ -45,7 +46,8 @@
                             style="width: 300px;">
                             <p>\1,249,000부터</p>
                         </td>
-                        <td colspan="2" tabindex="0" onkeyup="enterkey()">
+                        <td colspan="2" tabindex="0" onkeyup="enterkey()" onfocus="play(event)">
+                            <audio src="./audio/아이패드에어.MP3">오디오 지원되지 않는 브라우저</audio>
                             <h2>iPad Air</h2>
                             <img class="fit-picture"
                             src="./images/iPad Air.png"
@@ -53,7 +55,8 @@
                             style="width: 300px;">
                             <p>\929,000부터</p>
                         </td>
-                        <td colspan="2" tabindex="0" onkeyup="back()">
+                        <td colspan="2" tabindex="0" onkeyup="back()" onfocus="play(event)">
+                            <audio src="./audio/아이패드10세대.MP3">오디오 지원되지 않는 브라우저</audio>
                             <h2>iPad (10세대)</h2>
                             <img class="fit-picture"
                             src="./images/iPad(10).png"
@@ -63,7 +66,8 @@
                         </td>
                     </tr>
                     <tr class = "type2">
-                        <td colspan="2" tabindex="0" onkeyup="back()">
+                        <td colspan="2" tabindex="0" onkeyup="back()" onfocus="play(event)">
+                            <audio src="./audio/아이패드9세대.MP3">오디오 지원되지 않는 브라우저</audio>
                             <h2>iPad (9세대)</h2>
                             <img class="fit-picture"
                             src="./images/iPad(9).png"
@@ -71,7 +75,8 @@
                             style="width: 300px;">
                             <p>\499,000부터</p>
                         </td>
-                        <td colspan="2" tabindex="0" onkeyup="back()">
+                        <td colspan="2" tabindex="0" onkeyup="back()" onfocus="play(event)">
+                            <audio src="./audio/아이패드미니.MP3">오디오 지원되지 않는 브라우저</audio>
                             <h2>iPad mini</h2>
                             <img class="fit-picture"
                             src="./images/iPad mini.png"
