--- a/totalBlindness/page5.html
+++ b/totalBlindness/page5.html
@@ -50,37 +50,64 @@
             <table style="float:left;" class="type3">
                 <tbody>
                     <tr>
-                        <td><h3>iPad Air 구입하기</h3></td>
+                        <td tabindex="0" onfocus="play(event)">
+                            <audio src="./audio/아이패드에어구입하기.MP3">오디오 지원되지 않는 브라우저</audio>
+                            <h3>iPad Air 구입하기</h3></td>
                     </tr>
                     <tr>
-                        <td tabindex="0" onkeyup="entercolor()">스페이스 그레이</td>
-                        <td tabindex="0" onkeyup="back()">블루</td>
+                        <td class="line" tabindex="0" onkeyup="entercolor()" onfocus="play(event)" id="color">
+                            <audio src="./audio/스페이스그레이.MP3">오디오 지원되지 않는 브라우저</audio>
+                            스페이스 그레이</td>
+                        <td class="line" tabindex="0" onkeyup="back()" onfocus="play(event)">
+                            <audio src="./audio/블루.MP3">오디오 지원되지 않는 브라우저</audio>
+                            블루</td>
                     </tr>
                     <tr>
-                        <td tabindex="0" onkeyup="back()">핑크</td>
-                        <td tabindex="0" onkeyup="back()">퍼플</td>
+                        <td class="line" tabindex="0" onkeyup="back()" onfocus="play(event)">
+                            <audio src="./audio/핑크.MP3">오디오 지원되지 않는 브라우저</audio>
+                            핑크</td>
+                        <td class="line" tabindex="0" onkeyup="back()" onfocus="play(event)">
+                            <audio src="./audio/퍼플.MP3">오디오 지원되지 않는 브라우저</audio>
+                            퍼플</td>
                     </tr>
                     <tr>
-                        <td tabindex="0" onkeyup="back()">스타라이트</td>
+                        <td class="line" tabindex="0" onkeyup="back()" onfocus="play(event)">
+                            <audio src="./audio/스타라이트.MP3">오디오 지원되지 않는 브라우저</audio>
+                            스타라이트</td>
+                        <td class="line"></td>
+                    </tr>
+                    <tr>
+                        <td tabindex="0" onfocus="play(event)">
+                            <audio src="./audio/저장장치.MP3">오디오 지원되지 않는 브라우저</audio>
+                            <h3>저장 장치</h3></td>
+                    </tr>
+                    <tr>
+                        <td class="line" tabindex="0" onkeyup="enterdata()" onfocus="play(event)" id="gb">
+                            <audio src="./audio/64기가.MP3">오디오 지원되지 않는 브라우저</audio>
+                            64GB</td>
+                        <td class="line" tabindex="0" onkeyup="back()" onfocus="play(event)">
+                            <audio src="./audio/256기가.MP3">오디오 지원되지 않는 브라우저</audio>
+                            256GB</td>
+                    </tr>
+                    <tr>
+                        <td tabindex="0" onfocus="play(event)">
+                            <audio src="./audio/연결성.MP3">오디오 지원되지 않는 브라우저</audio>
+                            <h3>연결성</h3></td>
+                    </tr>
+                    <tr>
+                        <td class="line" tabindex="0" onkeyup="enterwifi()" onfocus="play(event)" id="wifi">
+                            <audio src="./audio/와이파이.MP3">오디오 지원되지 않는 브라우저</audio>
+                            Wi-Fi</td>
+                        <td class="line" tabindex="0" onkeyup="back()" onfocus="play(event)">
+                            <audio src="./audio/와이파이+셀룰러.MP3">오디오 지원되지 않는 브라우저</audio>
+                            Wi-Fi + Cellular</td>
+                    </tr>
+                    <tr>
                         <td></td>
-                    </tr>
-                    <tr>
-                        <td><h3>저장 장치</h3></td>
-                    </tr>
-                    <tr>
-                        <td tabindex="0" onkeyup="enterdata()">64GB</td>
-                        <td tabindex="0" onkeyup="back()">256GB</td>
-                    </tr>
-                    <tr>
-                        <td><h3>연결성</h3></td>
-                    </tr>
-                    <tr>
-                        <td tabindex="0" onkeyup="enterwifi()">Wi-Fi</td>
-                        <td tabindex="0" onkeyup="back()">Wi-Fi + Cellular</td>
-                    </tr>
-                    <tr>
                         <td colspan="2">
-                            <button onkeyup="check()">장바구니에 담기</button>
+                            <button onkeyup="check()" onfocus="play(event)" class="w-btn w-btn-gra1 w-btn-gra-anim btn">
+                                <audio src="./audio/장바구니에담기.MP3">오디오 지원되지 않는 브라우저</audio>
+                                장바구니에 담기</button>
                         </td>
                     </tr>
                 </tbody>
