--- a/totalBlindness/page6.html
+++ b/totalBlindness/page6.html
@@ -26,30 +26,40 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td colspan="2"><img class="fit-picture"
+                        <td class="line" colspan="2" tabindex="0" onfocus="play(event)">
+                            <audio src="./audio/아이패드이미지.MP3">오디오 지원되지 않는 브라우저</audio>
+                            <img class="fit-picture"
                             src="./images/buying.png"
                             alt="background img 1"
                             style="width: 300px;"></td>
-                        <td colspan="2">
+                        <td class="line" colspan="2" tabindex="0" onfocus="play(event)">
+                            <audio src="./audio/아이패드옵션.MP3">오디오 지원되지 않는 브라우저</audio>
                             iPad Air 10.9 Wi-Fi 64GB -
                             스페이스 그레이
                         </td>
-                        <td>
-                            1 아래화살표
+                        <td class="line" tabindex="0" onfocus="play(event)">
+                            <audio src="./audio/수량.MP3">오디오 지원되지 않는 브라우저</audio>
+                            1
                         </td>
-                        <td>
+                        <td class="line" tabindex="0" onfocus="play(event)">
+                            <audio src="./audio/가격.MP3">오디오 지원되지 않는 브라우저</audio>
                             \929,000
                         </td>
                     </tr>
-                    <tr>
-                        <td colspan="2"></td>
-                        <td>총계</td>
-                        <td colspan="2"></td>
-                        <td>\929,000</td>
+                    <tr tabindex="0" onfocus="play1(event)">
+                        <td class="line"></td>
+                        <td class="line"><audio src="./audio/총계.MP3" id="total">오디오 지원되지 않는 브라우저</audio>
+                            총계</td>
+                        <td class="line"><div></div></td>
+                        <td class="line"></td>
+                        <td class="line">\929,000</td>
+                        <td class="line"></td>
                     </tr>
                     <tr>
                         <td colspan="4"></td>
-                        <td tabindex="0" onkeyup="check()"><button>결제</button></td>
+                        <td tabindex="0" onkeyup="check()" tabindex="0" onfocus="play(event)">
+                            <audio src="./audio/결제버튼.MP3" id="store">오디오 지원되지 않는 브라우저</audio>
+                            <button class="w-btn w-btn-gra1 w-btn-gra-anim btn">결제</button></td>
                     </tr>
                 </tbody>
             </table>
