comment update, delete

--- a/commentPage/edcomment.html
+++ b/commentPage/edcomment.html
@@ -10,7 +10,7 @@
         <table class="mine"></table>
         <div style="position:absolute; bottom:0px;">
             <input id="comment-input" placeholder="댓글을 입력해 주세요.">
-            <button id="submit">등록</button>
+            <button id="submit" onclick="add_comment()">등록</button>
         </div>
     </body>
     <script src="edcomment.js"></script>
