--- a/commentPage/tbcomment.html
+++ b/commentPage/tbcomment.html
@@ -10,7 +10,7 @@
         <table class="mine2"></table>
         <div style="position:absolute; bottom:0px;">
             <input id="comment-input" placeholder="댓글을 입력해 주세요.">
-            <button id="submit">등록</button>
+            <button id="submit" onclick="add_comment2()">등록</button>
         </div>
     </body>
     <script src="tbcomment.js"></script>
