--- a/testpage.html
+++ b/testpage.html
@@ -5,6 +5,7 @@
         <link href="testpage.css" rel="stylesheet">
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
         <div id="beforeLogin" style="display: block;">
@@ -38,11 +39,11 @@
                 </tr>
                 <tr>
                     <td style="color: white;">비밀번호</td>
-                    <td><input type="text" id="pw"></td>
+                    <td><input type="password" id="pw"></td>
                 </tr>
                 <tr>
                     <td style="color: white;">비밀번호 확인</td>
-                    <td><input type="text" id="pwcheck"></td>
+                    <td><input type="password" id="pwcheck"></td>
                 </tr>
                 <tr>
                     <td><button id="submit">가입</button></td>
