--- a/lowVision/tutorial2.html
+++ b/lowVision/tutorial2.html
@@ -34,9 +34,10 @@
         </div>
         <h4>&nbsp;</h4>
         <h3>키보드를 이용하여 소리를 듣고 웹을 체험해보세요!</h3>
-        <h5>1. 소리를 듣고 [00 영화] 를 골라주세요.</h5>
-        <h5>2. ~~를 확인해주세요.</h5>
-        <h5>3. ~~ 를 통해 체험을 완료해주세요.</h5>
+        <h5>1. 체험을 시작하면 블러 기능이 자동으로 on이 됩니다.</h5>
+        <h5>2. tab을 눌러 이동하며 어떤 요소가 선택되었는지 확인해주세요.</h5>
+        <h5>3. 소리를 들으며 [국내영화]의 [웰컴 투 동막골] 영화를 찾아주세요.</h5>
+        <h5>4. 해당 영화를 찾았으면 enter을 눌러 체험을 완료해주세요.</h5>
         <h4>&nbsp;</h4>
         <div style ="text-align:center";>
             <img src="./image/blur.png">
