--- a/testpage.html
+++ b/testpage.html
@@ -58,12 +58,16 @@
                     <tr id="description">
                         <td></td>
                         <td>
+                            <span>tab 다음 요소로 이동</span><br>
+                            <span>shift + tab 이전 요소로 이동</span>
+                        </td>
+                        <td>
                             <div class="toggle_box">
-                            <input tabindex="2" type="checkbox" id="custom_input"></input>
-                            <label tabindex="2" id="toggle_btn_label" for="custom_input" class="toggle_btn_label">
-                            <span></span>
-                            </label>
-                        </div>
+                                <input tabindex="2" type="checkbox" id="custom_input"></input>
+                                <label tabindex="2" id="toggle_btn_label" for="custom_input" class="toggle_btn_label">
+                                <span></span>
+                                </label>
+                            </div>
                         </td>
                     </tr>
                     <tr>
