--- a/lowVision/test2.html
+++ b/lowVision/test2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>저시력 시각장애</title>
         <link href="test2.css" rel="stylesheet">
     </head>
@@ -15,22 +16,22 @@
             </div>
             <div id="context">
                 <table>
-                    <tr><td><h2 tabindex="0">해외영화</h2></td></tr>
+                    <tr><td><h2 tabindex="0" id="ext">해외영화</h2></td></tr>
                     <tr>
-                        <td><img tabindex="0" src="./image/harrypotter.jpg" alt="해리포터: 마법사의 돌"></td>
-                        <td><img tabindex="0" src="./image/thor.jpg" alt="토르: 러브 앤 썬더"></td>
-                        <td><img tabindex="0" src="./image/spiderman.jpg" alt="스파이더맨 노 웨이 홈"></td>
+                        <td><img tabindex="0" src="./image/harrypotter.jpg" alt="해리포터: 마법사의 돌" id="harrypotter"></td>
+                        <td><img tabindex="0" src="./image/thor.jpg" alt="토르: 러브 앤 썬더" id="thor"></td>
+                        <td><img tabindex="0" src="./image/spiderman.jpg" alt="스파이더맨 노 웨이 홈" id="spider"></td>
                     </tr>
                     <tr>
                         <td><h4>해리포터: 마법사의 돌</h4></td>
                         <td><h4>토르: 러브 앤 썬더</h4></td>
                         <td><h4>스파이더맨 노 웨이 홈</h4></td>
                     </tr>
-                    <tr><td><h2 tabindex="0">국내영화</h2></td></tr>
+                    <tr><td><h2 tabindex="0" id="int">국내영화</h2></td></tr>
                     <tr>
-                        <td><img tabindex="0" src="./image/gobackhome.jpg" alt="귀향"></td>
-                        <td><img tabindex="0" src="./image/welcome.jpg" alt="웰컴 투 동막골"></td>
-                        <td><img tabindex="0" src="./image/icanspeak.jpg" alt="아이캔스피크"></td>
+                        <td><img tabindex="0" src="./image/gobackhome.jpg" alt="귀향" id="gobackhome"></td>
+                        <td><img tabindex="0" src="./image/welcome.jpg" alt="웰컴 투 동막골" id="welcome"></td>
+                        <td><img tabindex="0" src="./image/icanspeak.jpg" alt="아이캔스피크" id="icanspeak"></td>
                     </tr>
                     <tr>
                         <td><h4>귀향</h4></td>
@@ -43,6 +44,14 @@
         <audio id="searchAudio" src="./audio/검색버튼.mp3"></audio>
         <audio id="categoryAudio" src="./audio/카테고리버튼.mp3"></audio>
         <audio id="reviewAudio" src="./audio/리뷰버튼.mp3"></audio>
+        <audio id="harrypotterAudio" src="./audio/해리포터 마법사의 돌.mp3"></audio>
+        <audio id="thorAudio" src="./audio/토르 러브앤썬더.mp3"></audio>
+        <audio id="spiderAudio" src="./audio/스파이더맨 노 웨이 홈.mp3"></audio>
+        <audio id="gobackhomeAudio" src="./audio/귀향.mp3"></audio>
+        <audio id="welcomeAudio" src="./audio/웰컴 투 동막골.mp3"></audio>
+        <audio id="icanspeakAudio" src="./audio/아이 캔 스피크.mp3"></audio>
+        <audio id="intAudio" src="./audio/국내영화.mp3"></audio>
+        <audio id="extAudio" src="./audio/해외영화.mp3"></audio>
     </body>
     <script src="test2.js"></script>
 </html>
