--- a/lowVision/tutorial2.html
+++ b/lowVision/tutorial2.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="tutorial2.js"></script>
     <style>
         h2 { text-align: center; }
