--- a/lowVision/test2.html
+++ b/lowVision/test2.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>저시력 시각장애</title>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
         <link href="test2.css" rel="stylesheet">
     </head>
     <body id="body">
