--- a/totalBlindness/cart.html
+++ b/totalBlindness/cart.html
@@ -35,9 +35,11 @@
         </div>
         <h4>&nbsp;</h4>
         <h3>화면을 끄고 키보드를 이용하여 소리를 듣고 웹을 체험해보세요!</h3>
-        <h5>1. 소리를 듣고 [00 제품] 을 골라주세요.</h5>
-        <h5>2. ~~를 확인해주세요.</h5>
-        <h5>3. ~~ 를 통해 체험을 완료해주세요.</h5>
+        <h5>1. 체험을 시작하면 블러 기능이 자동으로 on이 됩니다.</h5>
+        <h5>2. tab을 눌러 이동할 수 있고, enter을 눌러 선택할 수 있습니다.</h5>
+        <h5>3. 소리를 들으며 [검색 버튼]을 이용해 [아이패드 카테고리]에서 [아이패드 에어]를 찾아주세요.</h5>
+        <h5>4. [스페이스 그레이], [64], [Wi-fi] 옵션을 선택해 장바구니에 담아주세요.</h5>
+        <h5>5. 장바구니에 담긴 물건을 확인하고 [결제버튼]을 눌러 체험을 완료해주세요.</h5>
         <h4>&nbsp;</h4>
         <div style ="text-align:center";>
             <img src="./images/blindness.png">
