--- a/totalBlindness/page6.html
+++ b/totalBlindness/page6.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div id="div1">
-            <input type="checkbox" id="checkbox" checked>
+            <input type="checkbox" id="checkbox">
             <label for="checkbox"><span></span></label>
         </div>
 
