button & comment length , null update

--- a/commentPage/edcomment.html
+++ b/commentPage/edcomment.html
@@ -9,7 +9,7 @@
         <table class="others"></table>
         <table class="mine"></table>
         <div style="position:absolute; bottom:0px;">
-            <input id="comment-input" placeholder="댓글을 입력해 주세요.">
+            <input id="comment-input" placeholder="댓글을 입력해 주세요.(50자 제한)">
             <button id="submit" onclick="add_comment()">등록</button>
         </div>
     </body>
