--- a/testpage.html
+++ b/testpage.html
@@ -3,6 +3,34 @@
     <head>
         <title>체험 페이지</title>
         <link href="testpage.css" rel="stylesheet">
+        <style>
+            #join{
+                width:100px;
+                margin:auto;
+                display:block;
+                background-color: #000000;
+                border: none;
+                color:#fff;
+                padding: 15px 0;
+                text-align: center;
+                text-decoration: none;
+                font-size: 15px;
+                cursor: pointer;
+            }
+            #login{
+                width:100px;
+                margin:auto;
+                display:block;
+                background-color: #000000;
+                border: none;
+                color:#fff;
+                padding: 15px 0;
+                text-align: center;
+                text-decoration: none;
+                font-size: 15px;
+                cursor: pointer;
+            }
+        </style>
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
