--- a/commentPage/tbcomment.html
+++ b/commentPage/tbcomment.html
@@ -9,7 +9,7 @@
         <table class="others2"></table>
         <table class="mine2"></table>
         <div style="position:absolute; bottom:0px;">
-            <input id="comment-input" placeholder="댓글을 입력해 주세요.">
+            <input id="comment-input" placeholder="댓글을 입력해 주세요.(50자 제한)">
             <button id="submit" onclick="add_comment2()">등록</button>
         </div>
     </body>
