--- a/totalBlindness/page2.html
+++ b/totalBlindness/page2.html
@@ -35,11 +35,11 @@
                         <img class="fit-picture"
                         src="./images/bg1.png"
                         alt="background img 2"
-                        style="width: 1100px;">
+                        style="width: 1100px; display: none;">
                         <img class="fit-picture"
                         src="./images/bg3.png"
                         alt="background img 3"
-                        style="width: 1100px;">
+                        style="width: 1100px; display: none;">
                     </td>
                 </tr></tbody>
 
